--- a/task-2/index.html
+++ b/task-2/index.html
@@ -12,6 +12,7 @@
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
 
 	<title>Raffy Shop</title>
+
 </head>
 <body>
 
@@ -198,16 +199,16 @@
 	<div class="">
 		<ul class="nav justify-content-center">
 			<li class="nav-item">
-			   <a class="nav-link text-black active"href="#">JEWELRY</a>
+			   <a class="nav-link text-black active" href>JEWELRY</a>
 			</li>
 			<li class="nav-item">
-			   <a class="nav-link text-black" href="#">ACCESSORIES</a>
+			   <a class="nav-link text-black" href>ACCESSORIES</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link text-black" href="#">FASHION</a>
+				<a class="nav-link text-black" href>FASHION</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link text-black" href="#">OUTFITS</a>
+				<a class="nav-link text-black" href>OUTFITS</a>
 			</li>
 		</ul>
 	</div>
@@ -430,6 +431,7 @@
                   	</div>
 				</div>
 			</div>
+
 		</div>
 		<div class="row mt-4">
 			<div class="col-md">
@@ -648,7 +650,6 @@
 						</div>
 						<a class="card-text f-avel" href="#" id="read-more">Read More</a>
 					</div>
-					
 				</div>
 			</div>
 			<div class="col-md">
@@ -676,79 +677,70 @@
 	</div>
 	<!-- End News -->
 
-	<!-- Navbar down -->
-	<nav class="navbar navbar-primary bg-primary mt-5 justify-content-center">
-		<span class="navbar-text text-white f-avel ml-5" id="text-footer">
-			SUBSCRIBE TO OUR NEWS LETTER
-		</span>
-		<form class="form-inline ml-5">
-    		<input id="subscribe-form" class="form-control rounded-pill-left" type="text" placeholder="Email">
-    		<button id="subscribe-btn" class="btn btn-dark my-2 my-sm-0 rounded-pill-right" type="submit">Subscribe!</button>
-  		</form>
-     	<!-- -->
-	</nav>
-	<!-- End Navbar down -->
+	<!-- New Footer -->
+	<div class="container-fluid mt-5" style="background-color: #080200;">
+		<div class="container" style="background-color: #080200;">
+			<div class="row">
 
-	<!-- Footer -->
-	<div class="container-fluid bg-dark">	
-		<div class="container bg-dark">
-		<div class="row">
-			<div class="col-md mt-5">
-				<img src="img/footer-logo-1-1.png">
-				<p class="f-avel text-light mt-2">
-					There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.
-				</p>
-			</div>
-			<div class="col-md mt-5">
-				<nav id="nav-f" class="nav flex-column mt-n1">
-					<a class="nav-link mt-n1 text-7" href="#" style="margin-top: -1rem;">CATEGORIES</a>
-					<a class="nav-link mt-n1" href="#">Outfits</a>
-					<a class="nav-link mt-n1" href="#">Sunglasses</a>
-					<a class="nav-link mt-n1" href="#">Watches</a>
-					<a class="nav-link mt-n1" href="#">Bags</a>
-					<a class="nav-link mt-n1" href="#">Belts</a>
-				</nav>
-			</div>
-			<div class="col-md mt-5">
-				<nav id="nav-f" class="nav flex-column mt-n1">
-					<a class="nav-link mt-n1 text-7" href="#" style="margin-top: -1rem;">INFORMATION</a>
-					<a class="nav-link mt-n1" href="#">About Us</a>
-					<a class="nav-link mt-n1" href="#">Contact Us</a>
-					<a class="nav-link mt-n1" href="#">Sitemap</a>
-					<a class="nav-link mt-n1" href="#">FAQ Page</a>
-					<a class="nav-link mt-n1" href="#">Comming Soon</a>
-				</nav>
-			</div>
-			<div class="col-md mt-5">
-				<nav id="nav-f" class="nav flex-column mt-n1">
-					<a class="nav-link mt-n1 text-7" href="#" style="margin-top: -1rem;">MY ACCOUNT</a>
-					<a class="nav-link mt-n1" href="#">Orders</a>
-					<a class="nav-link mt-n1" href="#">Download</a>
-					<a class="nav-link mt-n1" href="#">Addresses</a>
-					<a class="nav-link mt-n1" href="#">Account Details</a>
-					<a class="nav-link mt-n1" href="#">Logout</a>
-				</nav>
-			</div>
-			<div class="col-md mt-5">
-				<nav id="nav-f" class="nav flex-column mt-n1">
-					<a class="nav-link mt-n1 text-7" href="#" style="margin-top: -1rem;">STORE INFORMATION</a>
-					<a class="nav-link mt-n1" href="#"><i class="fas fa-map-marker"></i> B-14 Collins Street West Victoria 2386</a>
-					<a class="nav-link mt-n1" href="#"><i class="fas fa-mobile-alt"></i> 0123456789</a>
-					<a class="nav-link mt-n1" href="#"><i class="far fa-envelope"></i> Contact@yourcompany.com</a>
+				<div class="col-md-2 mt-5">
+					<nav id="nav-f" class="nav flex-column mt-n1">
+						<a class="nav-link mt-n1 text-7" href="#" style="margin-top: -1rem;">CATEGORIES</a>
+						<a class="nav-link mt-n1" href="#">Outfits</a>
+						<a class="nav-link mt-n1" href="#">Sunglasses</a>
+						<a class="nav-link mt-n1" href="#">Watches</a>
+						<a class="nav-link mt-n1" href="#">Bags</a>
+						<a class="nav-link mt-n1" href="#">Belts</a>
+					</nav>
+				</div>
+
+				<div class="col-md-2 mt-5">
+					<nav id="nav-f" class="nav flex-column mt-n1">
+						<a class="nav-link mt-n1 text-7" href="#" style="margin-top: -1rem;">INFORMATION</a>
+						<a class="nav-link mt-n1" href="#">About Us</a>
+						<a class="nav-link mt-n1" href="#">Contact Us</a>
+						<a class="nav-link mt-n1" href="#">Sitemap</a>
+						<a class="nav-link mt-n1" href="#">FAQ Page</a>
+						<a class="nav-link mt-n1" href="#">Comming Soon</a>
+					</nav>
+				</div>
+				<div class="col-md-2 mt-5">
+					<nav id="nav-f" class="nav flex-column mt-n1">
+						<a class="nav-link mt-n1 text-7" href="#" style="margin-top: -1rem;">MY ACCOUNT</a>
+						<a class="nav-link mt-n1" href="#">Orders</a>
+						<a class="nav-link mt-n1" href="#">Download</a>
+						<a class="nav-link mt-n1" href="#">Addresses</a>
+						<a class="nav-link mt-n1" href="#">Account Details</a>
+						<a class="nav-link mt-n1" href="#">Logout</a>
+					</nav>
+				</div>
+				<div class="col-md-2 mt-5">
+					<nav id="nav-f" class="nav flex-column mt-n1">
+						<a class="nav-link mt-n1 text-7" href="#" style="margin-top: -1rem;">STORE INFORMATION</a>
+						<a class="nav-link mt-n1" href="#"><i class="fas fa-map-marker"></i> B-14 Collins Street West Victoria 2386</a>
+						<a class="nav-link mt-n1" href="#"><i class="fas fa-mobile-alt"></i> 0123456789</a>
+						<a class="nav-link mt-n1" href="#"><i class="far fa-envelope"></i> Contact@yourcompany.com</a>
+					</nav>
+				</div>
+				<div class="col-md-3 mt-5 ml-5 f-avel">
+					<h5 class="text-white">FOLLOW US</h5>
 					<a class="nav-link mt-n1" href="#">
-						<i class="fab fa-facebook-f"></i>  <i class="fab fa-twitter"></i>  <i class="fab fa-google-plus-g"></i>  <i class="fab fa-youtube"></i>  <i class="fab fa-instagram"></i>
+						<i class="fab fa-facebook-f"></i>
+						<i class="fab fa-twitter"></i>
+						<i class="fab fa-google-plus-g"></i>
+						<i class="fab fa-youtube"></i>
+						<i class="fab fa-instagram"></i>
 					</a>
-				</nav>
+					
+					<h5 class="text-white mt-5">NEWS LETTER</h5>
+					<form class="form-inline">
+			    		<input id="subscribe-form" style="width: 130px;" class="form-control rounded-pill-left" type="text" placeholder="Email">
+			    		<button id="subscribe-btn" class="btn btn-primary my-2 my-sm-0 rounded-pill-right" type="submit" style="width: 20%;"><i class="fas fa-paper-plane"></i></button>
+			  		</form>
+				</div>
 			</div>
 		</div>
-		</div>
 	</div>
-	<!-- End footer -->
-
-	<!-- Bottom footer -->
-	<div class="bg-brown p-3 text-white">
-		<h6 class="f-avel mt-1 ml-6">Copyright © 2019 demo All Rights Reserved</h6>
-	</div>
+	<!-- End New Footer -->
 
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -888,9 +880,11 @@
 
 			// Modal toggle
 			$("#ico-view").click(function() {
-				$('#viewModal').modal('show');//show the modal
+				$('#viewModal').modal('show'); //show the modal
 			});
 
+			// Prevents the carousel from cycling
+			$("#carouselExampleControls").carousel('pause');
 		});
     </script>
 
